# kaggle-competitions-notebooks

./: .gitignore  README.md  pyproject.toml
[AMP®-Parkinson's Disease Progression Prediction]/: .gitignore  README.md  parkinson.ipynb
[AMP®-Parkinson's Disease Progression Prediction]/src/: metrics.py  params.py  utils.py
[Child Mind Institute - Detect Sleep States]/: README.md
[Child Mind Institute - Detect Sleep States]/src/: README.md  __init__.py  callbacks.py  configs_inference.py  constants.py  constants_inference.py  data_processing.py  data_processing_inference.py  distributions.py  evaluation.py  helpers.py  losses.py  losses_inference.py  models.py  models_inference.py  modelspec_inference.py  params.py  prediction_inference.py  training.py  utils.py
[Child Mind Institute - Detect Sleep States]/training/: create_target.ipynb  train.ipynb
[Kaggle - LLM Science Exam]/: README.md
[Kaggle - LLM Science Exam]/inference/: kaggle-llm-science-improved-retrivial.ipynb
[Kaggle - LLM Science Exam]/src/: __init__.py  constants.py  data_processing.py  inference_utis.py  metrics.py  model.py  params.py  utils.py
[Kaggle - LLM Science Exam]/training/: kaggle_llm_science_exam_eda_deberta.ipynb
[Predict Student Performance from Game Play]/: README.md
[Predict Student Performance from Game Play]/inference/: xgb-using-previous-levels.ipynb
[Predict Student Performance from Game Play]/src/: constants.py  feature_names.py  params.py  preprocessing.py
