[tool.poetry]
name = "kaggle-competitions-code"
version = "0.1.0"
description = ""
authors = ["manuel <manuelpazpintor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
ipykernel = "6.26.0"
pandas = "1.5"
xgboost = "2.0.0"
tqdm = "^4.67.1"
scikit-learn = "1.3.1"
jinja2 = "^3.1.6"
pyarrow = "13.0.0"
charset-normalizer = "^3.4.3"
tsfresh = "0.20.3"
lightgbm = "4.0.0"
matplotlib = "3.7.4"
datasets = "2.14.4"
transformers = "4.27.0"
torch = "2.0.0"
sentencepiece = "^0.2.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select =  ["E", "W", "F"]
ignore = ["E501"]